# ros_thermal_grasp

./: .gitignore  CMakeLists.txt  README.md  license.txt  package.xml
data/: grasps
launch/: display.launch  load_HumanHand20DOF.launch  load_ThermalGrasper.launch  test_HumanHand20DOF.launch  test_ThermalGrasper.launch
scripts/: control_robot.py  graspit2urdf.py
urdf/: HumanHand20DOF.xacro  HumanHand20DOF_macro.xacro  ThermalGrasper.xacro  ThermalGrasper_macro.xacro  ThermalRobot.urdf  ThermalRobot.xacro  ThermalRobot_macro.xacro  allegro.urdf  allegro.xacro  allegro_macro.xacro
